--- a/style.css
+++ b/style.css
@@ -1,9 +1,21 @@
 .content {
   width: 300px;
   height: 300px;
-  margin: 50px auto 0px auto;
+  margin: auto;
 }
-.game-board {
+.wins {
+  text-align: center;
+  color: gold;
+  text-shadow: 0px 0px 2px black;
+  margin-bottom: 5px;
+}
+.scores {
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 25px;
+  font-size: 24px;
+}
+.gameboard {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
 }
@@ -29,4 +41,23 @@
 }
 .no-l {
   border-left: none;
+}
+.again {
+  margin: 30px auto 0px auto;
+  text-align: center;
+  padding: 3px 5px;
+  font-size: 24px;
+  width: 160px;
+  margin-top: 30px;
+  border: 1px solid black;
+  border-radius: 5px;
+  background-color: orangered;
+  color: white;
+  font-weight: 600;
+  display: none;
+}
+.again:hover {
+  background-color: greenyellow;
+  cursor: pointer;
+  color: black;
 }
