--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
   text-align: center;
   color: gold;
   text-shadow: 0px 0px 2px black;
-  margin-bottom: 5px;
+  margin-bottom: 25px;
 }
 .scores {
   display: flex;
@@ -55,9 +55,23 @@
   color: white;
   font-weight: 600;
   display: none;
+  position: relative;
+  transform: translateY(-80px);
+  z-index: 100;
 }
 .again:hover {
   background-color: greenyellow;
   cursor: pointer;
   color: black;
+}
+.blur {
+  content: "";
+  height: 100vh;
+  width: 100vw;
+  background-color: rgba(0, 0, 0, 0.2);
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: 10;
+  display: none;
 }
