--- a/style.css
+++ b/style.css
@@ -49,17 +49,23 @@
   font-size: 24px;
   width: 160px;
   margin-top: 30px;
+  font-weight: 600;
+  display: none;
+  position: relative;
+  transform: translateY(-90px);
+  z-index: 100;
+}
+.winner {
+  text-shadow: 1px 1px 3px black;
+}
+.playAgain {
   border: 1px solid black;
   border-radius: 5px;
   background-color: orangered;
   color: white;
-  font-weight: 600;
-  display: none;
-  position: relative;
-  transform: translateY(-80px);
-  z-index: 100;
+  margin-top: 20px;
 }
-.again:hover {
+.playAgain:hover {
   background-color: greenyellow;
   cursor: pointer;
   color: black;
@@ -74,4 +80,9 @@
   top: 0;
   z-index: 10;
   display: none;
+}
+.turn {
+  text-align: center;
+  margin-top: 20px;
+  font-size: 24px;
 }
