--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 .wins {
   text-align: center;
   color: gold;
-  text-shadow: 0px 0px 2px black;
+  text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.6);
   margin-bottom: 25px;
 }
 .scores {
@@ -22,7 +22,7 @@
 .field {
   height: 100px;
   width: 100px;
-  border: 1px solid black;
+  border: 1px solid rgba(0, 0, 0, 0.5);
   cursor: pointer;
   font-size: 100px;
   display: flex;
@@ -85,4 +85,6 @@
   text-align: center;
   margin-top: 20px;
   font-size: 24px;
+  color: limegreen;
+  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3);
 }
